--- a/index.html
+++ b/index.html
@@ -118,26 +118,120 @@
 </section>
 
 <!-- PROJECTS -->
+<!-- PROJECTS -->
 <section id="projects" class="py-24 px-6 bg-slate-900">
   <div class="max-w-6xl mx-auto text-center mb-16">
-    <h2 class="text-4xl font-extrabold text-gradient">Projets clés</h2>
+    <h2 class="text-4xl font-extrabold text-gradient">Projets académiques & professionnels</h2>
+    <p class="text-slate-400 mt-4">
+      Projets réalisés en contexte universitaire et professionnel, orientés développement,
+      intelligence artificielle et systèmes informatiques.
+    </p>
   </div>
 
-  <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-    <div class="glass p-6 rounded-2xl">
-      <h3 class="font-bold mb-2">Application Full-Stack</h3>
-      <p class="text-slate-400 text-sm">Gestion d’accueil – HTML, CSS, JS, PHP, MySQL</p>
+  <div class="grid md:grid-cols-2 gap-8 max-w-6xl mx-auto">
+
+    <!-- Stage -->
+    <div class="glass p-6 rounded-2xl" data-aos="fade-up">
+      <h3 class="font-bold text-lg mb-2 text-emerald-400">
+        Stage Développeuse Full-Stack – Centre de Formation Professionnelle
+      </h3>
+      <p class="text-slate-400 text-sm">
+        Conception et réalisation d’une application web de gestion de l’accueil.
+        Étude des besoins, modélisation UML et développement complet.
+      </p>
+      <p class="text-slate-500 text-xs mt-2 italic">
+        HTML, CSS, JavaScript, PHP, MySQL – Travail en équipe (3 mois)
+      </p>
     </div>
-    <div class="glass p-6 rounded-2xl">
-      <h3 class="font-bold mb-2">IA – Reconnaissance Faciale</h3>
-      <p class="text-slate-400 text-sm">CNN & GAN – Python</p>
+
+    <!-- REST -->
+    <div class="glass p-6 rounded-2xl" data-aos="fade-up">
+      <h3 class="font-bold text-lg mb-2 text-emerald-400">
+        Service Web REST – Gestion d’un Cabinet Médical
+      </h3>
+      <p class="text-slate-400 text-sm">
+        Développement d’un service REST permettant la gestion des patients,
+        médecins et rendez-vous.
+      </p>
+      <p class="text-slate-500 text-xs mt-2 italic">
+        Java, API REST, SQL
+      </p>
     </div>
-    <div class="glass p-6 rounded-2xl">
-      <h3 class="font-bold mb-2">IoT Intelligent</h3>
-      <p class="text-slate-400 text-sm">Node-RED, ESP32, Raspberry Pi</p>
+
+    <!-- CNN -->
+    <div class="glass p-6 rounded-2xl" data-aos="fade-up">
+      <h3 class="font-bold text-lg mb-2 text-emerald-400">
+        Reconnaissance des Expressions Faciales
+      </h3>
+      <p class="text-slate-400 text-sm">
+        Projet de deep learning basé sur un CNN pour la reconnaissance des
+        expressions faciales, avec optimisation via une architecture type ResNet.
+      </p>
+      <p class="text-slate-500 text-xs mt-2 italic">
+        Python, CNN, ResNet-like, Kaggle
+      </p>
     </div>
+
+    <!-- GAN -->
+    <div class="glass p-6 rounded-2xl" data-aos="fade-up">
+      <h3 class="font-bold text-lg mb-2 text-emerald-400">
+        Génération d’Images avec DCGAN
+      </h3>
+      <p class="text-slate-400 text-sm">
+        Entraînement d’un DCGAN pour générer des images réalistes de chiffres
+        manuscrits à partir du dataset MNIST.
+      </p>
+      <p class="text-slate-500 text-xs mt-2 italic">
+        Python, Deep Learning, GAN, MNIST
+      </p>
+    </div>
+
+    <!-- C++ -->
+    <div class="glass p-6 rounded-2xl" data-aos="fade-up">
+      <h3 class="font-bold text-lg mb-2 text-emerald-400">
+        Application C++ – Gestion de Questionnaires
+      </h3>
+      <p class="text-slate-400 text-sm">
+        Développement d’une application permettant la création, l’évaluation
+        et le suivi de questionnaires d’apprentissage.
+      </p>
+      <p class="text-slate-500 text-xs mt-2 italic">
+        C++, GitHub
+      </p>
+    </div>
+
+    <!-- Algo parallèle -->
+    <div class="glass p-6 rounded-2xl" data-aos="fade-up">
+      <h3 class="font-bold text-lg mb-2 text-emerald-400">
+        Algorithme Parallèle – Problème des N-Reines
+      </h3>
+      <p class="text-slate-400 text-sm">
+        Résolution du problème des N-Reines à l’aide d’un algorithme génétique
+        avec parallélisation pour optimiser les performances.
+      </p>
+      <p class="text-slate-500 text-xs mt-2 italic">
+        Algorithmes génétiques, Parallélisation
+      </p>
+    </div>
+
+    <!-- IoT -->
+    <div class="glass p-6 rounded-2xl md:col-span-2" data-aos="fade-up">
+      <h3 class="font-bold text-lg mb-2 text-emerald-400">
+        IoT – Éclairage Public Intelligent
+      </h3>
+      <p class="text-slate-400 text-sm">
+        Conception d’un système d’éclairage intelligent permettant
+        l’optimisation de la consommation énergétique via des capteurs, arduino, ESP32 et une
+        gestion automatisée.
+      </p>
+      <p class="text-slate-500 text-xs mt-2 italic">
+        Node-RED, ESP32, Raspberry Pi
+      </p>
+    </div>
+
   </div>
 </section>
+
 
 <!-- CONTACT -->
 <footer id="contact" class="py-16 text-center">
