--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meriem Louizini | Portfolio</title>
 
-  <!-- Fonts & Tailwind -->
+  <!-- Tailwind & libs -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -26,6 +26,28 @@
       background: linear-gradient(to right, #22c55e, #14b8a6);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+    }
+
+    /* COMPETENCES */
+    .skill-card {
+      transition: transform .4s ease, box-shadow .4s ease;
+    }
+    .skill-card:hover {
+      transform: translateY(-12px) scale(1.04);
+      box-shadow: 0 25px 45px rgba(16,185,129,0.3);
+    }
+    .skill-card img {
+      transition: transform .5s ease;
+    }
+    .skill-card:hover img {
+      transform: scale(1.1);
+    }
+
+    /* PROJETS */
+    .project-item {
+      display: none;
+      opacity: 0;
+      transition: opacity .6s ease;
     }
   </style>
 </head>
@@ -55,21 +77,21 @@
       </h1>
       <p class="text-slate-400 text-lg mb-8">
         Étudiante en Licence 3 Informatique à Mulhouse.  
-        Passionnée par le développement, l’IA et les systèmes concrets orientés métier.
+        Passionnée par le développement, l’IA et les systèmes orientés métier.
       </p>
       <div class="flex gap-4 flex-wrap">
         <a href="#projects" class="bg-emerald-500 text-slate-900 px-6 py-3 rounded-xl font-bold hover:scale-105 transition">
           Voir mes projets
         </a>
-        <a href="CVStage (1).pdf" target="_blank" class="border border-emerald-500 px-6 py-3 rounded-xl hover:bg-emerald-500 hover:text-slate-900 transition">
+        <a href="CVStage (1).pdf" target="_blank"
+           class="border border-emerald-500 px-6 py-3 rounded-xl hover:bg-emerald-500 hover:text-slate-900 transition">
           Télécharger mon CV
         </a>
       </div>
     </div>
 
     <div class="flex justify-center" data-aos="zoom-in">
-      <img src="Page.jpg" alt="Meriem Louizini"
-           class="w-80 h-80 object-cover rounded-3xl shadow-2xl border border-slate-700">
+      <img src="Page.jpg" class="w-80 h-80 object-cover rounded-3xl shadow-2xl border border-slate-700">
     </div>
   </div>
 </section>
@@ -78,13 +100,12 @@
 <section id="about" class="py-24 px-6 bg-slate-900">
   <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
     <img src="about.jfif" class="rounded-3xl shadow-xl w-80 h-80 object-cover" data-aos="fade-right">
-
     <div data-aos="fade-left">
       <h2 class="text-4xl font-extrabold mb-6 text-gradient">À propos de moi</h2>
       <p class="text-slate-400 leading-relaxed">
-        J’aime comprendre les besoins, structurer une solution et la transformer
-        en application utile. Sérieuse, curieuse et collaborative, je vise un
-        Master MIAGE pour évoluer à l’interface entre informatique, gestion et entreprise.
+        J’aime analyser les besoins, structurer des solutions et les transformer
+        en applications utiles. Sérieuse, curieuse et impliquée, je vise un
+        Master MIAGE.
       </p>
     </div>
   </div>
@@ -92,159 +113,113 @@
 
 <!-- SKILLS -->
 <section id="skills" class="py-24 px-6">
-  <div class="max-w-6xl mx-auto text-center mb-16">
+  <div class="text-center mb-16">
     <h2 class="text-4xl font-extrabold text-gradient">Compétences</h2>
   </div>
 
   <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-    <div class="glass p-6 rounded-2xl text-center" data-aos="fade-up">
-      <img src="DEV.jfif" class="rounded-xl mb-4 w-64 h-64 object-cover">
+    <div class="glass p-6 rounded-2xl text-center skill-card">
+      <img src="DEV.jfif" class="rounded-xl mb-4 w-64 h-64 object-cover mx-auto">
       <h3 class="font-bold text-xl mb-2">Développement</h3>
-      <p class="text-slate-400 text-sm">HTML, CSS, JavaScript, PHP, Java, SQL</p>
+      <p class="text-slate-400 text-sm">HTML, CSS, JS, PHP, Java, SQL</p>
     </div>
 
-    <div class="glass p-6 rounded-2xl text-center" data-aos="fade-up" data-aos-delay="100">
-      <img src="IA.jfif" class="rounded-xl mb-4 w-64 h-64 object-cover">
+    <div class="glass p-6 rounded-2xl text-center skill-card">
+      <img src="IA.jfif" class="rounded-xl mb-4 w-64 h-64 object-cover mx-auto">
       <h3 class="font-bold text-xl mb-2">IA & Data</h3>
-      <p class="text-slate-400 text-sm">CNN, GAN, Python, Big Data, MapReduce</p>
+      <p class="text-slate-400 text-sm">CNN, GAN, Python, Deep Learning</p>
     </div>
 
-    <div class="glass p-6 rounded-2xl text-center" data-aos="fade-up" data-aos-delay="200">
-      <img src="Miage.jfif" class="rounded-xl mb-4 w-64 h-64 object-cover">
+    <div class="glass p-6 rounded-2xl text-center skill-card">
+      <img src="Miage.jfif" class="rounded-xl mb-4 w-64 h-64 object-cover mx-auto">
       <h3 class="font-bold text-xl mb-2">MIAGE & Gestion</h3>
-      <p class="text-slate-400 text-sm">Analyse des besoins, logique métier, collaboration</p>
+      <p class="text-slate-400 text-sm">Analyse métier, collaboration</p>
     </div>
   </div>
 </section>
 
 <!-- PROJECTS -->
-<!-- PROJECTS -->
 <section id="projects" class="py-24 px-6 bg-slate-900">
-  <div class="max-w-6xl mx-auto text-center mb-16">
+  <div class="text-center mb-16">
     <h2 class="text-4xl font-extrabold text-gradient">Projets académiques & professionnels</h2>
-    <p class="text-slate-400 mt-4">
-      Projets réalisés en contexte universitaire et professionnel, orientés développement,
-      intelligence artificielle et systèmes informatiques.
-    </p>
   </div>
 
   <div class="grid md:grid-cols-2 gap-8 max-w-6xl mx-auto">
 
-    <!-- Stage -->
-    <div class="glass p-6 rounded-2xl" data-aos="fade-up">
-      <h3 class="font-bold text-lg mb-2 text-emerald-400">
-        Stage Développeuse Full-Stack – Centre de Formation Professionnelle
-      </h3>
-      <p class="text-slate-400 text-sm">
-        Conception et réalisation d’une application web de gestion de l’accueil.
-        Étude des besoins, modélisation UML et développement complet.
-      </p>
-      <p class="text-slate-500 text-xs mt-2 italic">
-        HTML, CSS, JavaScript, PHP, MySQL – Travail en équipe (3 mois)
-      </p>
+    <div class="glass p-6 rounded-2xl project-item">
+      <h3 class="font-bold text-emerald-400 mb-2">Stage – Gestion d’accueil</h3>
+      <p class="text-slate-400 text-sm">Étude des besoins, UML, application web</p>
+      <p class="text-xs italic text-slate-500">HTML, PHP, MySQL – 3 mois</p>
     </div>
 
-    <!-- REST -->
-    <div class="glass p-6 rounded-2xl" data-aos="fade-up">
-      <h3 class="font-bold text-lg mb-2 text-emerald-400">
-        Service Web REST – Gestion d’un Cabinet Médical
-      </h3>
-      <p class="text-slate-400 text-sm">
-        Développement d’un service REST permettant la gestion des patients,
-        médecins et rendez-vous.
-      </p>
-      <p class="text-slate-500 text-xs mt-2 italic">
-        Java, API REST, SQL
-      </p>
+    <div class="glass p-6 rounded-2xl project-item">
+      <h3 class="font-bold text-emerald-400 mb-2">REST – Cabinet Médical</h3>
+      <p class="text-slate-400 text-sm">API REST de gestion médicale</p>
+      <p class="text-xs italic text-slate-500">Java, SQL</p>
     </div>
 
-    <!-- CNN -->
-    <div class="glass p-6 rounded-2xl" data-aos="fade-up">
-      <h3 class="font-bold text-lg mb-2 text-emerald-400">
-        Reconnaissance des Expressions Faciales
-      </h3>
-      <p class="text-slate-400 text-sm">
-        Projet de deep learning basé sur un CNN pour la reconnaissance des
-        expressions faciales, avec optimisation via une architecture type ResNet.
-      </p>
-      <p class="text-slate-500 text-xs mt-2 italic">
-        Python, CNN, ResNet-like, Kaggle
-      </p>
+    <div class="glass p-6 rounded-2xl project-item">
+      <h3 class="font-bold text-emerald-400 mb-2">CNN – Expressions faciales</h3>
+      <p class="text-slate-400 text-sm">CNN optimisé ResNet-like</p>
+      <p class="text-xs italic text-slate-500">Python, Deep Learning</p>
     </div>
 
-    <!-- GAN -->
-    <div class="glass p-6 rounded-2xl" data-aos="fade-up">
-      <h3 class="font-bold text-lg mb-2 text-emerald-400">
-        Génération d’Images avec DCGAN
-      </h3>
-      <p class="text-slate-400 text-sm">
-        Entraînement d’un DCGAN pour générer des images réalistes de chiffres
-        manuscrits à partir du dataset MNIST.
-      </p>
-      <p class="text-slate-500 text-xs mt-2 italic">
-        Python, Deep Learning, GAN, MNIST
-      </p>
+    <div class="glass p-6 rounded-2xl project-item">
+      <h3 class="font-bold text-emerald-400 mb-2">DCGAN – MNIST</h3>
+      <p class="text-slate-400 text-sm">Génération d’images réalistes</p>
+      <p class="text-xs italic text-slate-500">GAN, Python</p>
     </div>
 
-    <!-- C++ -->
-    <div class="glass p-6 rounded-2xl" data-aos="fade-up">
-      <h3 class="font-bold text-lg mb-2 text-emerald-400">
-        Application C++ – Gestion de Questionnaires
-      </h3>
-      <p class="text-slate-400 text-sm">
-        Développement d’une application permettant la création, l’évaluation
-        et le suivi de questionnaires d’apprentissage.
-      </p>
-      <p class="text-slate-500 text-xs mt-2 italic">
-        C++, GitHub
-      </p>
+    <div class="glass p-6 rounded-2xl project-item">
+      <h3 class="font-bold text-emerald-400 mb-2">C++ – Questionnaires</h3>
+      <p class="text-slate-400 text-sm">Apprentissage & évaluation</p>
     </div>
 
-    <!-- Algo parallèle -->
-    <div class="glass p-6 rounded-2xl" data-aos="fade-up">
-      <h3 class="font-bold text-lg mb-2 text-emerald-400">
-        Algorithme Parallèle – Problème des N-Reines
-      </h3>
-      <p class="text-slate-400 text-sm">
-        Résolution du problème des N-Reines à l’aide d’un algorithme génétique
-        avec parallélisation pour optimiser les performances.
-      </p>
-      <p class="text-slate-500 text-xs mt-2 italic">
-        Algorithmes génétiques, Parallélisation
-      </p>
-    </div>
-
-    <!-- IoT -->
-    <div class="glass p-6 rounded-2xl md:col-span-2" data-aos="fade-up">
-      <h3 class="font-bold text-lg mb-2 text-emerald-400">
-        IoT – Éclairage Public Intelligent
-      </h3>
-      <p class="text-slate-400 text-sm">
-        Conception d’un système d’éclairage intelligent permettant
-        l’optimisation de la consommation énergétique via des capteurs, arduino, ESP32 et une
-        gestion automatisée.
-      </p>
-      <p class="text-slate-500 text-xs mt-2 italic">
-        Node-RED, ESP32, Raspberry Pi
-      </p>
+    <div class="glass p-6 rounded-2xl project-item">
+      <h3 class="font-bold text-emerald-400 mb-2">IoT – Éclairage intelligent</h3>
+      <p class="text-slate-400 text-sm">Optimisation énergétique</p>
+      <p class="text-xs italic text-slate-500">Node-RED, ESP32</p>
     </div>
 
   </div>
 </section>
-
 
 <!-- CONTACT -->
 <footer id="contact" class="py-16 text-center">
   <h3 class="text-3xl font-extrabold text-gradient mb-6">Contact</h3>
   <div class="flex justify-center gap-8 text-xl">
     <a href="mailto:louizmeriem1@gmail.com" class="hover:text-emerald-400"><i class="fas fa-envelope"></i></a>
-    <a href="https://github.com/MeryOuma-inf" class="hover:text-emerald-400"><i class="fab fa-github"></i></a>
-    <a href="https://www.linkedin.com/in/meriem-l" class="hover:text-emerald-400"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/MeryOuma-inf" target="_blank" class="hover:text-emerald-400"><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/meriem-l" target="_blank" class="hover:text-emerald-400"><i class="fab fa-linkedin"></i></a>
   </div>
 </footer>
 
+<!-- SCRIPTS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init({ once: true });</script>
+
+<script>
+  const projects = document.querySelectorAll('.project-item');
+  let index = 0;
+  const visible = 2;
+
+  function rotateProjects() {
+    projects.forEach(p => {
+      p.style.display = 'none';
+      p.style.opacity = 0;
+    });
+
+    for (let i = 0; i < visible; i++) {
+      const p = projects[(index + i) % projects.length];
+      p.style.display = 'block';
+      setTimeout(() => p.style.opacity = 1, 100);
+    }
+    index = (index + visible) % projects.length;
+  }
+
+  rotateProjects();
+  setInterval(rotateProjects, 4000);
+</script>
 
 </body>
 </html>
