--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
     </div>
 
     <!-- THEME TOGGLE -->
-    <button onclick="toggleTheme()" class="text-xl hover:scale-110 transition">
+<button onclick="toggleTheme()" 
+  class="text-xl hover:scale-110 transition text-yellow-400 dark:text-yellow-300">
+
       <i id="themeIcon" class="fas fa-sun"></i>
     </button>
   </div>
