--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meriem Louizini | Portfolio</title>
+  <title>Meriem Louizini-Portfolio</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
+
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
