--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <a href="#projects" class="bg-emerald-500 text-slate-900 px-6 py-3 rounded-xl font-bold hover:scale-105 transition">
           Voir mes projets
         </a>
-        <a href="CVStage (1).pdf" target="_blank"
+        <a href="CV1Stage.pdf" target="_blank"
            class="border border-emerald-500 px-6 py-3 rounded-xl hover:bg-emerald-500 hover:text-slate-900 transition">
           Télécharger mon CV
         </a>
