--- a/index.html
+++ b/index.html
@@ -3,25 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meriem Louizini - Portfolio</title>
+  <title>Meriem Louizini | Portfolio</title>
 
-  <!-- FAVICON -->
+  <!-- ICON ONGLET -->
   <link rel="icon" type="image/png" href="logo.png">
 
-  <!-- Tailwind -->
+  <!-- TAILWIND -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <style>
     body {
       font-family: 'Plus Jakarta Sans', sans-serif;
       transition: background-color .5s, color .5s;
     }
-
-    .dark { background-color: #020617; color: #e5e7eb; }
-    .light { background-color: #f8fafc; color: #020617; }
+    .dark { background:#020617; color:#e5e7eb; }
+    .light { background:#f8fafc; color:#020617; }
 
     .glass {
       background: rgba(255,255,255,0.08);
@@ -30,24 +28,20 @@
     }
 
     .text-gradient {
-      background: linear-gradient(to right, #22c55e, #14b8a6);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      background: linear-gradient(to right,#22c55e,#14b8a6);
+      -webkit-background-clip:text;
+      -webkit-text-fill-color:transparent;
     }
 
     .skill-card {
-      transition: transform .6s ease, box-shadow .6s ease;
+      transition:.6s;
     }
     .skill-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 18px 30px rgba(16,185,129,0.25);
+      transform:translateY(-6px);
+      box-shadow:0 18px 30px rgba(16,185,129,.25);
     }
 
-    .project-item {
-      display: none;
-      opacity: 0;
-      transition: opacity 1s ease;
-    }
+    .project-slide { display:none; }
   </style>
 </head>
 
@@ -59,17 +53,16 @@
     <span class="text-2xl font-extrabold text-emerald-400">ML.</span>
 
     <div class="hidden md:flex gap-8 text-sm font-semibold">
-      <a href="#home" class="hover:text-emerald-400">Accueil</a>
-      <a href="#about" class="hover:text-emerald-400">À propos</a>
-      <a href="#skills" class="hover:text-emerald-400">Compétences</a>
-      <a href="#projects" class="hover:text-emerald-400">Projets</a>
-      <a href="#certifications" class="hover:text-emerald-400">Certifications</a>
-      <a href="#contact" class="hover:text-emerald-400">Contact</a>
+      <a href="#home">Accueil</a>
+      <a href="#about">À propos</a>
+      <a href="#skills">Compétences</a>
+      <a href="#projects">Projets</a>
+      <a href="#certifications">Certifications</a>
+      <a href="#contact">Contact</a>
     </div>
 
-    <!-- THEME -->
-    <button onclick="toggleTheme()" class="text-xl transition">
-      <i id="themeIcon" class="fas fa-sun text-yellow-400"></i>
+    <button onclick="toggleTheme()" class="text-xl text-yellow-400">
+      <i id="themeIcon" class="fas fa-sun"></i>
     </button>
   </div>
 </nav>
@@ -77,103 +70,79 @@
 <!-- HERO -->
 <section id="home" class="min-h-screen flex items-center px-6 pt-24">
   <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-    <div data-aos="fade-right">
+    <div>
       <h1 class="text-5xl font-extrabold mb-6">
         Bonjour, je suis <span class="text-gradient">Meriem Louizini</span>
       </h1>
       <p class="text-slate-400 text-lg mb-8">
-        Étudiante en Licence 3 Informatique à Mulhouse, orientée développement,
-        data et systèmes concrets à impact métier.
+        Étudiante en Licence 3 Informatique à Mulhouse.  
+        Développement, IA, systèmes concrets orientés métier.
       </p>
-      <div class="flex gap-4 flex-wrap">
-        <a href="#projects" class="bg-emerald-500 text-slate-900 px-6 py-3 rounded-xl font-bold hover:scale-105 transition">
-          Voir mes projets
-        </a>
-        <a href="CV1Stage.pdf" target="_blank"
-           class="border border-emerald-500 px-6 py-3 rounded-xl hover:bg-emerald-500 hover:text-slate-900 transition">
-          Télécharger mon CV
-        </a>
+      <div class="flex gap-4">
+        <a href="#projects" class="bg-emerald-500 px-6 py-3 rounded-xl font-bold text-slate-900">Mes projets</a>
+        <a href="CV1Stage.pdf" target="_blank" class="border border-emerald-500 px-6 py-3 rounded-xl">Télécharger CV</a>
       </div>
     </div>
-
-    <div class="flex justify-center" data-aos="zoom-in">
-      <img src="Page.jpg" class="w-80 h-80 object-cover rounded-3xl shadow-2xl border border-slate-700">
-    </div>
+    <img src="Page.jpg" class="w-80 h-80 rounded-3xl object-cover mx-auto">
   </div>
 </section>
 
 <!-- ABOUT -->
 <section id="about" class="py-24 px-6 bg-slate-900">
   <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-    <img src="about.jfif" class="rounded-3xl shadow-xl w-80 h-80 object-cover" data-aos="fade-right">
-    <div data-aos="fade-left">
-      <h2 class="text-4xl font-extrabold mb-6 text-gradient">À propos</h2>
-      <p class="text-slate-400 leading-relaxed">
-        Curieuse, rigoureuse et orientée solution, j’aime analyser un besoin,
-        structurer une réponse technique et la transformer en application utile.
-        Mon objectif est d’intégrer un Master MIAGE en alternance.
-      </p>
-    </div>
+    <img src="about.jfif" class="w-80 h-80 rounded-3xl object-cover">
+    <p class="text-slate-400">
+      J’aime comprendre les besoins, structurer des solutions et les transformer
+      en applications utiles. Je vise un Master MIAGE (ouvert à l’alternance).
+    </p>
   </div>
 </section>
 
 <!-- SKILLS -->
 <section id="skills" class="py-24 px-6">
   <h2 class="text-center text-4xl font-extrabold text-gradient mb-16">Compétences</h2>
-
   <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-    <div class="glass p-6 rounded-2xl text-center skill-card">
-      <img src="DEV.jfif" class="rounded-xl mb-4 w-64 h-64 object-cover mx-auto">
-      <h3 class="font-bold text-xl">Développement</h3>
-      <p class="text-slate-400 text-sm">HTML, CSS, JavaScript, PHP, Java, SQL</p>
+    <div class="glass p-6 rounded-2xl skill-card text-center">
+      <img src="DEV.jfif" class="w-64 h-64 mx-auto rounded-xl">
+      <h3 class="font-bold mt-4">Développement</h3>
+      <p class="text-sm text-slate-400">HTML, CSS, JS, PHP, Java, SQL</p>
     </div>
-
-    <div class="glass p-6 rounded-2xl text-center skill-card">
-      <img src="IA.jfif" class="rounded-xl mb-4 w-64 h-64 object-cover mx-auto">
-      <h3 class="font-bold text-xl">IA & Data</h3>
-      <p class="text-slate-400 text-sm">CNN, GAN, Python, Big Data</p>
+    <div class="glass p-6 rounded-2xl skill-card text-center">
+      <img src="IA.jfif" class="w-64 h-64 mx-auto rounded-xl">
+      <h3 class="font-bold mt-4">IA & Data</h3>
+      <p class="text-sm text-slate-400">CNN, GAN, ResNet, Python</p>
     </div>
-
-    <div class="glass p-6 rounded-2xl text-center skill-card">
-      <img src="Miage.jfif" class="rounded-xl mb-4 w-64 h-64 object-cover mx-auto">
-      <h3 class="font-bold text-xl">MIAGE & Gestion</h3>
-      <p class="text-slate-400 text-sm">Analyse métier, modélisation, travail d’équipe</p>
+    <div class="glass p-6 rounded-2xl skill-card text-center">
+      <img src="Miage.jfif" class="w-64 h-64 mx-auto rounded-xl">
+      <h3 class="font-bold mt-4">MIAGE</h3>
+      <p class="text-sm text-slate-400">Analyse, logique métier</p>
     </div>
   </div>
 </section>
 
 <!-- PROJECTS -->
-<section id="projects" class="py-24 px-6 bg-slate-900">
-  <h2 class="text-center text-4xl font-extrabold text-gradient mb-16">Projets</h2>
+<section id="projects" class="py-24 px-6 bg-slate-900 relative">
+  <h2 class="text-center text-4xl font-extrabold text-gradient mb-12">Projets</h2>
+
+  <div class="absolute left-6 top-1/2 text-3xl cursor-pointer" onmouseover="prevProject()">❮</div>
+  <div class="absolute right-6 top-1/2 text-3xl cursor-pointer" onmouseover="nextProject()">❯</div>
 
   <div class="grid md:grid-cols-2 gap-8 max-w-6xl mx-auto">
-    <div class="glass p-6 rounded-2xl project-item">
-      <h3 class="font-bold text-emerald-400">Stage – Application de gestion d’accueil</h3>
-      <p class="text-slate-400 text-sm">
-        Analyse des besoins, modélisation UML et développement d’une application
-        web facilitant la gestion quotidienne.
-      </p>
+    <div class="glass p-6 rounded-2xl project-slide">
+      <h3 class="text-emerald-400 font-bold">CNN – Reconnaissance faciale</h3>
+      <p>Optimisation ResNet-like</p>
     </div>
-
-    <div class="glass p-6 rounded-2xl project-item">
-      <h3 class="font-bold text-emerald-400">Service Web REST – Cabinet médical</h3>
-      <p class="text-slate-400 text-sm">
-        Conception d’une API REST pour la gestion des patients, médecins et rendez-vous.
-      </p>
+    <div class="glass p-6 rounded-2xl project-slide">
+      <h3 class="text-emerald-400 font-bold">Qualité Programmation</h3>
+      <p>Gestion questionnaires & évaluation</p>
     </div>
-
-    <div class="glass p-6 rounded-2xl project-item">
-      <h3 class="font-bold text-emerald-400">Deep Learning – Reconnaissance faciale</h3>
-      <p class="text-slate-400 text-sm">
-        Modèle CNN optimisé type ResNet pour la classification des expressions faciales.
-      </p>
+    <div class="glass p-6 rounded-2xl project-slide">
+      <h3 class="text-emerald-400 font-bold">DCGAN – MNIST</h3>
+      <p>Génération d’images réalistes</p>
     </div>
-
-    <div class="glass p-6 rounded-2xl project-item">
-      <h3 class="font-bold text-emerald-400">IoT – Éclairage public intelligent</h3>
-      <p class="text-slate-400 text-sm">
-        Système automatisé d’optimisation énergétique via capteurs et microcontrôleurs.
-      </p>
+    <div class="glass p-6 rounded-2xl project-slide">
+      <h3 class="text-emerald-400 font-bold">IoT – Éclairage intelligent</h3>
+      <p>Node-RED, ESP32</p>
     </div>
   </div>
 </section>
@@ -181,25 +150,11 @@
 <!-- CERTIFICATIONS -->
 <section id="certifications" class="py-24 px-6">
   <h2 class="text-center text-4xl font-extrabold text-gradient mb-16">Certifications</h2>
-
-  <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-    <div class="glass p-6 rounded-2xl text-center">
-      <i class="fas fa-certificate text-3xl text-emerald-400 mb-4"></i>
-      <h3 class="font-bold">Bases du Deep Learning</h3>
-      <p class="text-slate-400 text-sm">CNN, réseaux neuronaux</p>
-    </div>
-
-    <div class="glass p-6 rounded-2xl text-center">
-      <i class="fas fa-database text-3xl text-emerald-400 mb-4"></i>
-      <h3 class="font-bold">SQL & Bases de données</h3>
-      <p class="text-slate-400 text-sm">Modélisation & requêtes avancées</p>
-    </div>
-
-    <div class="glass p-6 rounded-2xl text-center">
-      <i class="fas fa-code text-3xl text-emerald-400 mb-4"></i>
-      <h3 class="font-bold">Développement Web</h3>
-      <p class="text-slate-400 text-sm">Front-end & back-end</p>
-    </div>
+  <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
+    <div class="glass p-6 rounded-2xl text-center">Cisco – Cybersecurity</div>
+    <div class="glass p-6 rounded-2xl text-center">Java – POO</div>
+    <div class="glass p-6 rounded-2xl text-center">English for IT 1</div>
+    <div class="glass p-6 rounded-2xl text-center">Langue Française</div>
   </div>
 </section>
 
@@ -213,37 +168,27 @@
   </div>
 </footer>
 
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>AOS.init({ once: true });</script>
-
 <script>
-  const body = document.body;
-  const icon = document.getElementById("themeIcon");
-
-  function toggleTheme() {
+  const body=document.body;
+  const icon=document.getElementById("themeIcon");
+  function toggleTheme(){
     body.classList.toggle("dark");
     body.classList.toggle("light");
     icon.classList.toggle("fa-sun");
     icon.classList.toggle("fa-moon");
   }
 
-  const projects = document.querySelectorAll('.project-item');
-  let index = 0;
-
-  function rotateProjects() {
-    projects.forEach(p => { p.style.display = 'none'; p.style.opacity = 0; });
-    for (let i = 0; i < 2; i++) {
-      const p = projects[(index + i) % projects.length];
-      p.style.display = 'block';
-      setTimeout(() => p.style.opacity = 1, 150);
-    }
-    index = (index + 2) % projects.length;
+  const slides=document.querySelectorAll(".project-slide");
+  let i=0;
+  function show(){
+    slides.forEach((s,idx)=>s.style.display=(idx===i||idx===i+1)?"block":"none");
   }
-
-  rotateProjects();
-  setInterval(rotateProjects, 6000);
+  function nextProject(){i=(i+2)%slides.length;show();}
+  function prevProject(){i=(i-2+slides.length)%slides.length;show();}
+  show();
 </script>
 
 </body>
 </html>
+
 
