--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         Bonjour, je suis <span class="text-gradient">Meriem Louizini</span>
       </h1>
       <p class="text-slate-400 text-lg mb-8">
-        Étudiante en Licence 3 Informatique à Mulhouse.  
-        Développement, IA, systèmes concrets orientés métier.
+        Étudiante en Licence 3 Informatique à l'université de haute alsace Mulhouse.  
+         je recherche un stage de 3 mois à partir de fin avril / début mai  .
       </p>
       <div class="flex gap-4">
         <a href="#projects" class="bg-emerald-500 px-6 py-3 rounded-xl font-bold text-slate-900">Mes projets</a>
@@ -92,8 +92,15 @@
   <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
     <img src="about.jfif" class="w-80 h-80 rounded-3xl object-cover">
     <p class="text-slate-400">
-      J’aime comprendre les besoins, structurer des solutions et les transformer
-      en applications utiles. Je vise un Master MIAGE (ouvert à l’alternance).
+      Étant étudiante étrangère, issue d’une double expérience et de points de vue différents, j’aime m’engager dans plusieurs secteurs de l’informatique.
+Cela se reflète dans mon parcours, notamment à travers mon Master 1 en Systèmes Informatiques Intelligents, où j’ai acquis des bases solides en intelligence artificielle, 
+      en machine learning et en algorithmes de recherche, ainsi qu’une rigueur dans la résolution de problèmes.
+
+Par ailleurs, mes certifications en cybersécurité m’ont permis de mieux comprendre les enjeux liés à la protection des systèmes 
+      et à la lutte contre les menaces informatiques. Aujourd’hui en Licence Informatique à l’Université de Haute-Alsace, je souhaite consolider mes connaissances en algorithmique classique, en traitement d’images, en programmation orientée objet et en systèmes d’information, afin de mieux modéliser les systèmes d’entreprise.
+
+Aimant l’informatique dans sa diversité et son lien avec le monde professionnel, je souhaite poursuivre en Master MIAGE, 
+      une formation qui allie informatique et gestion, et m’intégrer dans un environnement professionnel pour travailler sur des projets concrets et enrichissants.
     </p>
   </div>
 </section>
@@ -115,7 +122,7 @@
     <div class="glass p-6 rounded-2xl skill-card text-center">
       <img src="Miage.jfif" class="w-64 h-64 mx-auto rounded-xl">
       <h3 class="font-bold mt-4">MIAGE</h3>
-      <p class="text-sm text-slate-400">Analyse, logique métier</p>
+      <p class="text-sm text-slate-400">Analyse, economie d'entreprise , techniques financieres et comptables </p>
     </div>
   </div>
 </section>
@@ -129,20 +136,20 @@
 
   <div class="grid md:grid-cols-2 gap-8 max-w-6xl mx-auto">
     <div class="glass p-6 rounded-2xl project-slide">
-      <h3 class="text-emerald-400 font-bold">CNN – Reconnaissance faciale</h3>
-      <p>Optimisation ResNet-like</p>
+      <h3 class="text-emerald-400 font-bold">CNN – Reconnaissance d'expression faciale</h3>
+      <p>Optimisation ResNet-like en Python, kaggle sur dataset FER2018</p>
     </div>
     <div class="glass p-6 rounded-2xl project-slide">
       <h3 class="text-emerald-400 font-bold">Qualité Programmation</h3>
-      <p>Gestion questionnaires & évaluation</p>
+      <p>Gestion questionnaires & évaluation en C++ et github </p>
     </div>
     <div class="glass p-6 rounded-2xl project-slide">
       <h3 class="text-emerald-400 font-bold">DCGAN – MNIST</h3>
-      <p>Génération d’images réalistes</p>
+      <p>Génération d’images réalistes en python et google colab</p>
     </div>
     <div class="glass p-6 rounded-2xl project-slide">
       <h3 class="text-emerald-400 font-bold">IoT – Éclairage intelligent</h3>
-      <p>Node-RED, ESP32</p>
+      <p>Node-RED, ESP32 et  arduino</p>
     </div>
   </div>
 </section>
@@ -151,10 +158,12 @@
 <section id="certifications" class="py-24 px-6">
   <h2 class="text-center text-4xl font-extrabold text-gradient mb-16">Certifications</h2>
   <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
-    <div class="glass p-6 rounded-2xl text-center">Cisco – Cybersecurity</div>
-    <div class="glass p-6 rounded-2xl text-center">Java – POO</div>
-    <div class="glass p-6 rounded-2xl text-center">English for IT 1</div>
-    <div class="glass p-6 rounded-2xl text-center">Langue Française</div>
+    <div class="glass p-6 rounded-2xl text-center">Cisco – Cybersecurity<p>Concepts de base de la cybersécurité</p></div>
+    <div class="glass p-6 rounded-2xl text-center">Java – POO<p>Programmation orienté objet</p></div>
+    <div class="glass p-6 rounded-2xl text-center">English for IT 1 <p>A course that teaches the English language in a specific IT context.
+
+</p> </div>
+    <div class="glass p-6 rounded-2xl text-center">Langue Française<p>La maîtrise de six niveaux en langue française</p></div>
   </div>
 </section>
 
