--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </p>
       <div class="flex gap-4">
         <a href="#projects" class="bg-emerald-500 px-6 py-3 rounded-xl font-bold text-slate-900">Mes projets</a>
-        <a href="CV1Stage.pdf" target="_blank" class="border border-emerald-500 px-6 py-3 rounded-xl">Télécharger CV</a>
+        <a href="CV1-stage.pdf" target="_blank" class="border border-emerald-500 px-6 py-3 rounded-xl">Télécharger CV</a>
       </div>
     </div>
     <img src="Page.jpg" class="w-80 h-80 rounded-3xl object-cover mx-auto">
